--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^20.3.15",
     "@angular/router": "^20.3.15",
     "@tailwindcss/postcss": "^4.1.18",
+    "angular-cli-ghpages": "^2.0.3",
     "firebase": "^11.10.0",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
